# rust-actix-framework

./: .env.docker  .env.example  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  __.env  docker-compose.yml
examples/: .env.docker  .env.example  cargo.toml
examples/src/: main.rs
migrations/2019-09-30-115154_create_users/: up.sql
src/: auth.rs  cache.rs  config.rs  database.rs  errors.rs  extractors.rs  helpers.rs  lib.rs  main.rs  paginate-old.rs  paginate.rs  pagination.rs  routes.rs  schema.rs  server.rs  state.rs  validate.rs
src/handlers/: auth.rs  file.rs  health.rs  mod.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/middlewares/: auth.rs  mod.rs
src/models/: auth.rs  mod.rs  user.rs
src/proc_macro/: Cargo.toml  README.md
src/proc_macro/src/: lib.rs  timestamps.rs
src/tests/: auth.rs  health.rs  helpers.rs  mod.rs  user.rs
static/: index.html  test.txt
