[package]
name = "rust_actix_framework"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.3"
derive_more = "0.15"
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.1"
lazy_static = "1.4"
listenfd = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"

[dev-dependencies]
actix-http-test = "0.2.0"