[package]
name = "actix-framework"
version = "0.2.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
description = "Actix web is a simple, pragmatic and extremely fast web framework for Rust."
readme = "README.md"
keywords = ["actix", "framework"]
repository = "https://github.com/ddimaria/rust-actix-framework"
documentation = "https://docs.rs/actix-framework"
license = "MIT"
edition = "2018"

[lib]
name = "actix_framework"
path = "src/lib.rs"

[dependencies]
actix = "0.9.0"
actix-cors = "0.5"
actix-files = "0.3"
actix-identity = "0.3"
actix-multipart = "0.2.0"
actix-redis = "0.8.0"
actix-rt = "1"
actix-service = "1.0.6"
actix-web = "3"
argon2rs = "0.2.1"
async-std = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.3.1"
jsonwebtoken = "7"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
proc_macro = { path = "src/proc_macro" }
rayon = "1.0"
redis-async = "0.6.1"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["mysql"]