[package]
name = "axum-framework"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>", "Logan Smith <contact@logansmith.net"]
readme = "README.md"
keywords = ["axum", "framework"]
repository = "https://github.com/logan-smith/rust-axum-framework"
license = "MIT"
edition = "2018"

[dependencies]
argon2rs = "0.2.1"
axum = "0.4.8"
axum-sessions = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4.4", features = ["chrono","postgres", "r2d2", "uuidv07"] }
# diesel = { version = "1.4.4", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
envy = "0.4"
http = "0.2.8"
jsonwebtoken = "7"
lazy_static = "1.4"
log = "0.4"
rayon = "1.5.3"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"

[dev-dependencies]
actix-http-test = "0.2.0"